# orbit-backend

./: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_RAILWAY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  IMPLEMENTATION_STATUS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  WEEK2_COMPLETE_SUMMARY.md  WEEK2_IMPLEMENTATION.md  WEEK4_WEBSOCKET_IMPLEMENTATION.md  alembic.ini  deploy-to-railway.sh  docker-compose.yml  fix_remaining.py  fix_schema_in_funcs.py  fix_table_args.py  generate_project.py  nixpacks.toml  push-to-github.sh  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh  verify_and_fix_all.py
alembic/: env.py
alembic/versions/: 20251227_1208_b764e0df6a95_initial_migration_create_all_tables.py
app/: __init__.py  main.py
app/api/v1/: auth.py
app/api/v1/routes/: __init__.py  activities.py  chat.py  health.py  notifications.py  sessions.py  tasks.py  websocket.py
app/core/: __init__.py  config.py  database.py  logging.py  redis.py  security.py
app/db/: base.py
app/models/: __init__.py  activity.py  calendar.py  document.py  email.py  integration.py  message.py  notification.py  relationship.py  session.py  task.py  user.py
app/schemas/: auth.py  chat.py  common.py  notification.py  session.py  task.py
app/services/activity/: __init__.py  service.py
app/services/agent/: __init__.py  service.py  tools.py
app/services/integration/: __init__.py  n8n_client.py  service.py
app/services/notification/: __init__.py  service.py
app/services/task/: __init__.py  service.py
app/services/websocket/: __init__.py  manager.py
db/: init.sql
tests/: test_agent_service.py  test_auth.py
tests/unit/: test_notification_service.py  test_websocket_manager.py
